<resources>
    <string name="app_name">Memes</string>
    <string name="bottom_text">BOTTOM TEXT</string>
    <string name="top_text">TOP TEXT</string>
    <string name="create_button_text">CREATE MEME</string>
    <string name="edit_button_text">DONE WITH EDIT</string>
    <string name="choose_image_text">PRESS TO ENTER\n IMAGE URL</string>
    <string name="meme_title_text">ENTER MEME TITLE</string>
    <string name="new_meme">ADD NEW MEME</string>
    <string name="edit_meme">EDIT</string>
</resources>
