<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/memeFragment"
    android:background="@android:color/black"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    >

    <Button
        android:id="@+id/choose_Image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_image_text"
        android:textSize="12dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="50dp"/>

    <EditText
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="30dp"
        android:backgroundTint="@android:color/white"
        android:selectAllOnFocus="true"
        android:text="@string/meme_title_text"/>

    <TextView
        android:id="@+id/final_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="30dp"
        android:textAllCaps="true"
        android:backgroundTint="@android:color/white"
        android:visibility="gone"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="1000dp"
        android:layout_centerVertical="true"
        android:id="@+id/final_image"
        />

    <ImageView
        android:id="@+id/meme_Image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/no_image"
        android:maxWidth="300dp"
        android:maxHeight="250dp"
        android:layout_centerInParent="true"
        android:background="@android:color/black"
        />

    <EditText
        android:id="@+id/top_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/meme_Image"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:background="@android:color/transparent"
        android:textSize="20dp"
        android:textStyle="bold"
        android:selectAllOnFocus="true"
        android:maxEms="8"
        android:gravity="center"
        android:text="@string/top_text"/>

    <EditText
        android:id="@+id/bottom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/meme_Image"
        android:layout_marginBottom="25dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:background="@android:color/transparent"
        android:textSize="20dp"
        android:textStyle="bold"
        android:maxEms="7"
        android:gravity="center"
        android:selectAllOnFocus="true"
        android:text="@string/bottom_text"/>

    <TextView
        android:id="@+id/final_top_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/final_image"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:background="@android:color/transparent"
        android:textSize="25dp"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:textStyle="bold"
        android:selectAllOnFocus="true"
        android:maxEms="8"
        android:textAllCaps="true"
        android:gravity="center"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/final_bottom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/final_image"
        android:layout_marginBottom="55dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:background="@android:color/transparent"
        android:textSize="25dp"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:textStyle="bold"
        android:maxEms="7"
        android:textAllCaps="true"
        android:gravity="center"
        android:selectAllOnFocus="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:textColor="@android:color/white"
        android:text="PRESS TEXT TO EDIT"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/create_button_text"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:textSize="20dp"
        />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/edit_button_text"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:textSize="20dp"
        android:visibility="gone"
        />

</RelativeLayout>